--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@strapi/plugin-users-permissions": "4.14.4",
     "@strapi/strapi": "4.14.4",
     "better-sqlite3": "8.6.0",
+    "npm": "^10.2.1",
     "pg": "^8.11.3",
     "pg-connection-string": "^2.6.2"
   },
