updating node version

--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "uuid": "b48ea0af-6658-4043-8844-f8b544d95d08"
   },
   "engines": {
-    "node": ">=16.0.0 <=20.x.x",
-    "npm": "^10.2.1"
-  },
+    "node": "18.16.0",
+    "npm": "9.5.1" 
+ },
   "license": "MIT"
 }
