modify node version

--- a/package.json
+++ b/package.json
@@ -24,9 +24,8 @@
   "strapi": {
     "uuid": "b48ea0af-6658-4043-8844-f8b544d95d08"
   },
-  "engines": {
-    "node": "18.16.0",
-    "npm": "9.5.1" 
- },
+  "engines": { "node": ">=16.0.0 <=19.9.0", 
+  "npm": "^6.0.0" },
+  
   "license": "MIT"
 }
