--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "better-sqlite3": "8.6.0",
     "npm": "^10.2.1",
     "pg": "^8.11.3",
-    "pg-connection-string": "^2.6.2"
+    "pg-connection-string": "^2.6.2",
+    "strapi-provider-upload-aws-s3": "^3.6.11"
   },
   "author": {
     "name": "A Strapi developer"
@@ -28,6 +29,5 @@
     "node": "16.x.x",
     "npm": "7.x.x"
   },
-
   "license": "MIT"
 }
