--- a/extensions/upload/config/settings.json
+++ b/extensions/upload/config/settings.json
@@ -2,7 +2,7 @@
     "provider": "aws-s3",
     "providerOptions": {
         "accessKeyId": "AKIA4MTWLLLCKO2ABTLX",
-        "secreatAccessKey": "OaarQbdaGpa8W7PPkEKkx65dAPsZJVG4dfKz3t+u",
+        "secretAccessKey": "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",
         "region": "eu-west-3",
         "params": {
             "Bucket": "charlescantin"
